--- a/examples/megatron/configs/llama3.1_405B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.1_405B-pretrain.yaml
@@ -24,7 +24,7 @@ modules:
       profile_ranks: [0]
       disable_tensorboard: false
 
-      train_iters: ${PRIMUS_TRAIN_ITERS:20}
+      train_iters: ${PRIMUS_TRAIN_ITERS:10}
       micro_batch_size: ${PRIMUS_MBS:1}
       global_batch_size: ${PRIMUS_GBS:256}
 
@@ -44,15 +44,21 @@ modules:
       norm_epsilon: 1.0e-6
 
       # parallel
-      tensor_model_parallel_size: 2
-      pipeline_model_parallel_size: 2 
+      tensor_model_parallel_size: 4
+      pipeline_model_parallel_size: 14
       expert_model_parallel_size: 1
+      context_parallel_size: 1
 
       # data
       mock_data: true
       train_data_path: ${TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
+
+      # recompute
+      #recompute_granularity: full # full, selective
+      #recompute_method: block # uniform, block
+      #recompute_num_layers: 9 # int
 
       # ckpt
       finetune: false
