--- a/primus/configs/modules/torchtitan/pre_trainer.yaml
+++ b/primus/configs/modules/torchtitan/pre_trainer.yaml
@@ -51,3 +51,6 @@ float8:
   enable_fsdp_float8_all_gather: false
   precompute_float8_dynamic_scale_for_fsdp: false
   filter_fqns: ["output"]
+
+experimental:
+  custom_args_module : "primus.backends.torchtitan.config_extension"
