--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -96,9 +96,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Echo Path
+      - name: Show Environment Info
         run: |
-           echo "PWD: $(pwd)"
+          echo "Hostname: $(hostname)"
+          echo "PWD: $(pwd)"
+          echo "HOME: $HOME"
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          echo "Runner Temp Dir: $RUNNER_TEMP"
+          echo "Runner Tool Cache: $RUNNER_TOOL_CACHE"
       - name: Install Primus
         run: |
           pip install -r requirements.txt
