--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,13 +64,10 @@ jobs:
       - run: echo "Begin Primus-Turbo Install."
       - name: Install Primus-Turbo
         run: |
-          if [ -d "${PRIMUS_WORKDIR}/Primus-Turbo" ]; then
-            mv ${PRIMUS_WORKDIR}/Primus-Turbo ${PRIMUS_WORKDIR}/Primus-Turbo.old.$(date +%s) || true
-          fi
-          mv Primus-Turbo ${PRIMUS_WORKDIR}/
-          echo "Primus-Turbo dir: ${PRIMUS_WORKDIR}/Primus-Turbo"
-          git config --global --add safe.directory ${PRIMUS_WORKDIR}/Primus-Turbo
-          cd ${PRIMUS_WORKDIR}/Primus-Turbo
+          mv Primus-Turbo tmp/
+          echo "Primus-Turbo dir: tmp/Primus-Turbo"
+          git config --global --add safe.directory tmp/Primus-Turbo
+          cd tmp/Primus-Turbo
           start_time=$(date +%s)
           echo "✅ [Pip install requirements] started at: $(date)"
           mkdir -p ./pip_cache
