update primus-turbo in ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
           submodules: "recursive"
           path: Primus-Turbo
           token: ${{ secrets.PRIMUS_TURBO_SECRET }}
-          ref: 9499c6e74c9d62997775dd841ab268eb9fca98b4 # feat(async-tp): support fused_all_gather_matmul for async-tp.
+          ref: 8b3bce54d41b409f03787fb6d51637e7d1a10263 # feat(async-tp): support fused_matmul_reduce_scatter for async-tp.
       - run: echo "Begin Primus-Turbo Install."
       - name: Install Primus-Turbo
         run: |
