feat(turbo): Primus-Torchtitan support Primus-Turbo backend. (#118)
Co-authored-by: Xiaoming-AMD <xiaoming.peng@amd.com>

--- a/examples/torchtitan/configs/llama3.1_8B-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_8B-pretrain.yaml
@@ -14,3 +14,9 @@ modules:
       sink_level: null
       file_sink_level: DEBUG
       stderr_sink_level: INFO
+
+      # model:
+      #   converters: ["mx"]
+      primus_turbo:
+        enable_primus_turbo: false
+        enable_attention_float8: false
