feat(megatron): tune llama3.1 70B config, enable NVTE BWD v3, disable grad acc fusion for 8B

--- a/examples/megatron/configs/llama3_8B-pretrain.yaml
+++ b/examples/megatron/configs/llama3_8B-pretrain.yaml
@@ -65,3 +65,5 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
+      
+      gradient_accumulation_fusion: false
