--- a/examples/megatron/configs/llama3.1_70B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.1_70B-pretrain.yaml
@@ -16,12 +16,12 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
 
-      train_iters: ${PRIMUS_TRAIN_ITERS:20}
-      micro_batch_size: ${PRIMUS_MBS:1}
-      global_batch_size: ${PRIMUS_GBS:512}
+      train_iters: 10
+      micro_batch_size: 3
+      global_batch_size: 24
 
-      seq_length: ${PRIMUS_SEQ_LENGTH:8192}
-      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:8192}
+      seq_length: 8192
+      max_position_embeddings: 8192
 
       lr: 1.0e-5
       min_lr: 0.0
@@ -69,4 +69,4 @@ modules:
       # recompute
       recompute_granularity: full # full, selective
       recompute_method: block # uniform, block
-      recompute_num_layers: 12 # int
+      recompute_num_layers: 80 # int
