--- a/examples/megatron/configs/llama2_70B-pretrain.yaml
+++ b/examples/megatron/configs/llama2_70B-pretrain.yaml
@@ -16,9 +16,9 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
 
-      train_iters: ${PRIMUS_TRAIN_ITERS:20}
-      micro_batch_size: ${PRIMUS_MBS:2}
-      global_batch_size: ${PRIMUS_GBS:3072}
+      train_iters: 10
+      micro_batch_size: 7
+      global_batch_size: 56
 
       seq_length: 4096
       max_position_embeddings: 4096
@@ -65,9 +65,8 @@ modules:
       ckpt_format: torch_dist
       sequence_parallel: 1
       gradient_accumulation_fusion: false
-      #deprecated_use_mcore_models: true
 
       # recompute
       recompute_granularity: full # full, selective
       recompute_method: block # uniform, block
-      recompute_num_layers: 12 # int
+      recompute_num_layers: 80 # int
