fix(config): hardcode training params, remove env var fallbacks

--- a/examples/megatron/configs/mixtral_8x7B_v0.1-pretrain.yaml
+++ b/examples/megatron/configs/mixtral_8x7B_v0.1-pretrain.yaml
@@ -24,8 +24,8 @@ modules:
       train_iters: 3
       micro_batch_size: 2
       global_batch_size: 128
-      seq_length: ${PRIMUS_SEQ_LENGTH:4096}
-      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
+      seq_length: 4096
+      max_position_embeddings: 4096
       lr: 1.0e-5
       min_lr: 0.0
       lr_warmup_iters: 2
@@ -39,9 +39,9 @@ modules:
       norm_epsilon: 1.0e-6
 
       # parallel
-      tensor_model_parallel_size: ${PRIMUS_TP:1}
-      pipeline_model_parallel_size: ${PRIMUS_PP:1}
-      expert_model_parallel_size: ${PRIMUS_EP:8}
+      tensor_model_parallel_size: 1
+      pipeline_model_parallel_size: 1
+      expert_model_parallel_size: 8
       overlap_grad_reduce: true
       overlap_param_gather: true
 
