--- a/examples/megatron/configs/llama3.3_70B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.3_70B-pretrain.yaml
@@ -1,28 +1,24 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: ${EXP_NAME:llama3.1_8B-pretrain}
+exp_name: ${EXP_NAME:llama3_70B-pretrain}
 workspace: ./output
 
 modules:
   pre_trainer:
     framework: megatron
     config: pre_trainer.yaml
-
-    # model to run
-    model: llama3.1_8B.yaml
+    model: llama3.1_70B.yaml
     overrides:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
-      # disable_wandb: false
-      # disable_tensorboard: false
       stderr_sink_level: DEBUG
 
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
 
       train_iters: 10
-      micro_batch_size: 2
-      global_batch_size: 16
+      micro_batch_size: 3
+      global_batch_size: 24
 
       seq_length: 8192
       max_position_embeddings: 8192
@@ -44,7 +40,6 @@ modules:
       pipeline_model_parallel_size: 1
       expert_model_parallel_size: 1
       overlap_grad_reduce: true
-      overlap_param_gather: true
 
       # data
       mock_data: true
@@ -63,4 +58,15 @@ modules:
       no_save_optim: null
       no_save_rng: null
       disable_last_saving: true
-      ckpt_format: torch
+
+      use_torch_fsdp2: true
+      use_distributed_optimizer: false
+      overlap_param_gather: false
+      ckpt_format: torch_dist
+      sequence_parallel: 1
+      gradient_accumulation_fusion: false
+
+      # recompute
+      recompute_granularity: full # full, selective
+      recompute_method: block # uniform, block
+      recompute_num_layers: 80 # int
