--- a/examples/megatron/configs/mixtral_8x22B_v0.1-pretrain.yaml
+++ b/examples/megatron/configs/mixtral_8x22B_v0.1-pretrain.yaml
@@ -24,8 +24,8 @@ modules:
       train_iters: 3
       micro_batch_size: 2
       global_batch_size: 128
-      seq_length: ${PRIMUS_SEQ_LENGTH:8192}
-      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:8192}
+      seq_length: 8192
+      max_position_embeddings: 8192
       lr: 1.0e-5
       min_lr: 0.0
       lr_warmup_iters: 2
@@ -39,9 +39,9 @@ modules:
       norm_epsilon: 1.0e-6
 
       # parallel
-      tensor_model_parallel_size: ${PRIMUS_TP:1}
-      pipeline_model_parallel_size: ${PRIMUS_PP:4}
-      expert_model_parallel_size: ${PRIMUS_EP:4}
+      tensor_model_parallel_size: 1
+      pipeline_model_parallel_size: 4
+      expert_model_parallel_size: 8
       overlap_grad_reduce: true
       overlap_param_gather: true
 
