--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -125,6 +125,7 @@ jobs:
           rm -rf "${{ env.UT_LOG_PATH }}"
           mkdir -p "${{ env.UT_LOG_PATH }}"
           MASTER_PORT=10009 DATA_PATH=/apps/tas/0_public/data \
+          UT_LOG_PATH="${{ env.UT_LOG_PATH }}" \
           python ./tests/run_unit_tests.py
   clean:
     env:
