do not use turbo by default

--- a/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
@@ -77,6 +77,6 @@ modules:
       ckpt_format: torch
       eval_iters: 0
 
-      enable_primus_turbo: true
+      enable_primus_turbo: false
       enable_trubo_attention_float8 : false
       enable_trubo_gemm_float8 : true
