feat(megatron): tune mixtral config

--- a/primus/configs/models/megatron/mixtral_8x22B_v0.1.yaml
+++ b/primus/configs/models/megatron/mixtral_8x22B_v0.1.yaml
@@ -11,6 +11,7 @@ num_attention_heads: 48
 init_method_std: 0.01
 
 rotary_base: 1000000
+masked_softmax_fusion: false
 
 tokenizer_type: MixtralTokenizer
 tokenizer_model: mistralai/Mixtral-8x22B-v0.1
