--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
           submodules: "recursive"
           path: Primus-Turbo
           token: ${{ secrets.PRIMUS_TURBO_SECRET }}
-          ref: 9499c6e74c9d62997775dd841ab268eb9fca98b4 # feat(async-tp): support fused_all_gather_matmul for async-tp.
+          ref: 765b0b45433232a9f84e56fec762c2b8ee1f79cc # refactor(ops): refactor gemm fp8 blockwise api (#36)
       - run: echo "Begin Primus-Turbo Install."
       - name: Install Primus-Turbo
         run: |
