--- a/examples/megatron/configs/llama2_7B-pretrain.yaml
+++ b/examples/megatron/configs/llama2_7B-pretrain.yaml
@@ -22,9 +22,9 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
-      train_iters: ${PRIMUS_TRAIN_ITERS:50}
-      micro_batch_size: ${PRIMUS_MBS:4}
-      global_batch_size: ${PRIMUS_GBS:256}
+      train_iters: 50
+      micro_batch_size: 4
+      global_batch_size: 256
 
       seq_length: 4096
       max_position_embeddings: 4096
