--- a/examples/megatron/configs/llama3.1_8B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.1_8B-pretrain.yaml
@@ -20,12 +20,12 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
-      train_iters: ${PRIMUS_TRAIN_ITERS:50}
-      micro_batch_size: ${PRIMUS_MBS:2}
-      global_batch_size: ${PRIMUS_GBS:128}
+      train_iters: 50
+      micro_batch_size: 2
+      global_batch_size: 128
 
-      seq_length: ${PRIMUS_SEQ_LENGTH:8192}
-      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:8192}
+      seq_length: 8192
+      max_position_embeddings: 8192
 
       lr: 1.0e-5
       min_lr: 0.0
