--- a/examples/megatron/configs/llama3_70B-pretrain.yaml
+++ b/examples/megatron/configs/llama3_70B-pretrain.yaml
@@ -14,14 +14,14 @@ modules:
       stderr_sink_level: DEBUG
 
       log_avg_skip_iterations: 2
-      log_avg_reset_interval: 5
+      log_avg_reset_interval: 50
 
-      train_iters: ${PRIMUS_TRAIN_ITERS:20}
-      micro_batch_size: ${PRIMUS_MBS:1}
-      global_batch_size: ${PRIMUS_GBS:512}
+      train_iters: 50
+      micro_batch_size: 3
+      global_batch_size: 24
 
-      seq_length: ${PRIMUS_SEQ_LENGTH:8192}
-      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:8192}
+      seq_length: 8192
+      max_position_embeddings: 8192
 
       lr: 1.0e-5
       min_lr: 0.0
@@ -65,17 +65,8 @@ modules:
       ckpt_format: torch_dist
       sequence_parallel: 1
       gradient_accumulation_fusion: false
-      #deprecated_use_mcore_models: true
 
       # recompute
       recompute_granularity: full # full, selective
       recompute_method: block # uniform, block
-      recompute_num_layers: 12 # int
-
-      # transformer_impl: transformer_engine
-      # fp8: hybrid
-      # fp8_margin: 0
-      # fp8_interval: 1
-      # fp8_amax_history_len: 1024
-      # fp8_amax_compute_algo: max
-      # attention_softmax_in_fp32: true
+      recompute_num_layers: 80 # int
