--- a/examples/megatron/configs/llama3_8B-pretrain.yaml
+++ b/examples/megatron/configs/llama3_8B-pretrain.yaml
@@ -19,14 +19,14 @@ modules:
       stderr_sink_level: DEBUG
 
       log_avg_skip_iterations: 2
-      log_avg_reset_interval: 5
+      log_avg_reset_interval: 50
 
-      train_iters: ${PRIMUS_TRAIN_ITERS:20}
-      micro_batch_size: ${PRIMUS_MBS:3}
-      global_batch_size: ${PRIMUS_GBS:1536}
+      train_iters: 50
+      micro_batch_size: 2
+      global_batch_size: 16
 
-      seq_length: ${PRIMUS_SEQ_LENGTH:8192}
-      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:8192}
+      seq_length: 8192
+      max_position_embeddings: 8192
 
       lr: 1.0e-5
       min_lr: 0.0
@@ -65,3 +65,5 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
+
+      gradient_accumulation_fusion: false
