add parameter back

--- a/primus/configs/models/megatron/primus_megatron_model.yaml
+++ b/primus/configs/models/megatron/primus_megatron_model.yaml
@@ -2,6 +2,8 @@
 disable_primus_topk_router: false
 moe_router_force_load_balancing: false
 use_deprecated_20241209_moe_layer: false
+moe_use_fused_router_with_aux_score: false
+fused_padded_mla_attention: false
 
 window_size: null
 use_hybrid_sliding_window_attention: false
