feat(turbo): Primus-Megatron support Primus-Turbo backend (#124)
Co-authored-by: wenxie-amd <wen.xie@amd.com>
Co-authored-by: Xiaoming-AMD <Xiaoming.Peng@amd.com>
Co-authored-by: zhenhuang12 <Zhen.Huang@amd.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
           submodules: "recursive"
           path: Primus-Turbo
           token: ${{ secrets.PRIMUS_TURBO_SECRET }}
-          ref: 8b3bce54d41b409f03787fb6d51637e7d1a10263 # feat(async-tp): support fused_matmul_reduce_scatter for async-tp.
+          ref: 765b0b45433232a9f84e56fec762c2b8ee1f79cc # refactor(ops): refactor gemm fp8 blockwise api (#36)
       - run: echo "Begin Primus-Turbo Install."
       - name: Install Primus-Turbo
         run: |
