--- a/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
@@ -76,3 +76,7 @@ modules:
       disable_last_saving: true
       ckpt_format: torch
       eval_iters: 0
+
+      enable_primus_turbo: false
+      enable_turbo_attention_float8 : false
+      enable_turbo_gemm_float8 : true
