--- a/examples/megatron/configs/llama3_8B-pretrain.yaml
+++ b/examples/megatron/configs/llama3_8B-pretrain.yaml
@@ -67,3 +67,7 @@ modules:
       ckpt_format: torch
 
       gradient_accumulation_fusion: false
+
+      enable_primus_turbo: false
+      enable_turbo_attention_float8 : false
+      enable_turbo_gemm_float8 : true
