--- a/primus/configs/modules/megatron/trainer_base.yaml
+++ b/primus/configs/modules/megatron/trainer_base.yaml
@@ -1,6 +1,7 @@
 includes:
   - ../module_base.yaml
   - primus_megatron_module.yaml
+  - primus_turbo.yaml
 
 trainable: true
 
@@ -370,7 +371,3 @@ is_hybrid_model: false
 heterogeneous_layers_config_path: null
 heterogeneous_layers_config_encoded_json: null
 inprocess_restart: false
-
-enable_primus_turbo: false
-enable_turbo_attention_float8 : false
-enable_turbo_gemm_float8 : true
