feat: add --backend_path support to prepare_experiment.py

--- a/examples/megatron/configs/llama3.1_8B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.1_8B-pretrain.yaml
@@ -5,7 +5,7 @@ workspace: ./output
 
 modules:
   pre_trainer:
-    framework: megatron
+    framework: light-megatron
     config: pre_trainer.yaml
 
     # model to run
