Enable rope fusion to force attention uses BSHD layout. Backend chooses much faster attention kernel with this layout.

--- a/examples/megatron/configs/deepseek_v2_lite-pretrain_MI355.yaml
+++ b/examples/megatron/configs/deepseek_v2_lite-pretrain_MI355.yaml
@@ -29,6 +29,8 @@ modules:
 
       # mla false
       multi_latent_attention: false
+      # attn uses "bshd" layout, enabling AMD optimized kernel.
+      apply_rope_fusion: true
 
       # hyber parameters
       train_iters: 10
