fix(config): update gradient_accumulation_fusion and moe_use_legacy_grouped_gemm comment

--- a/examples/megatron/exp_pretrain.yaml
+++ b/examples/megatron/exp_pretrain.yaml
@@ -70,9 +70,9 @@ modules:
       # fusion
       # 20250321: need latest megatron docker image
       moe_permute_fusion: false
-      # 20250317: need latest apex in docker image
-      gradient_accumulation_fusion: false
-      # 20250317: TE grouped gemm has numerical issue
+      # fused wgrad gemm and accumulation
+      gradient_accumulation_fusion: true
+      # recommend set `false` in fp8
       moe_use_legacy_grouped_gemm: true
 
       # ckpt
