--- a/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
@@ -54,9 +54,9 @@ modules:
       # fusion
       # 20250321: need latest megatron docker image
       moe_permute_fusion: false
-      # 20250317: need latest apex in docker image
+      # fused wgrad gemm and accumulation
       gradient_accumulation_fusion: true
-      # 20250317: TE grouped gemm has numerical issue
+      # recommend set `false` in fp8
       moe_use_legacy_grouped_gemm: true
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
