--- a/examples/megatron/configs/deepseek_200B_proxy-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_200B_proxy-pretrain.yaml
@@ -21,7 +21,7 @@ modules:
       log_avg_reset_interval: 50
 
       # hyber parameters
-      train_iters: 5
+      train_iters: 10
       micro_batch_size: 1
       global_batch_size: 128
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
@@ -41,13 +41,13 @@ modules:
       # recompute
       recompute_granularity: full # full, selective
       recompute_method: block # uniform, block
-      recompute_num_layers: 14 # int
+      recompute_num_layers: 0 # int
 
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
-      pipeline_model_parallel_size: ${PRIMUS_PP:4}
+      pipeline_model_parallel_size: ${PRIMUS_PP:8}
       expert_model_parallel_size: ${PRIMUS_EP:8}
-      num_virtual_stages_per_pipeline_rank: 4
+      # num_virtual_stages_per_pipeline_rank: 4
       overlap_grad_reduce: true
       overlap_param_gather: true
 
