--- a/examples/megatron/configs/deepseek_200B_proxy-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_200B_proxy-pretrain.yaml
@@ -14,6 +14,7 @@ modules:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
       stderr_sink_level: DEBUG
+      disable_tensorboard: false
 
       # debug
       moe_router_force_load_balancing: true
@@ -23,7 +24,7 @@ modules:
       # hyber parameters
       train_iters: 10
       micro_batch_size: 1
-      global_batch_size: 128
+      global_batch_size: 512
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
       max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
       lr: 1.0e-5
@@ -38,18 +39,27 @@ modules:
       init_method_std: 0.008
       norm_epsilon: 1.0e-6
 
-      # recompute
-      recompute_granularity: full # full, selective
-      recompute_method: block # uniform, block
-      recompute_num_layers: 0 # int
+      # # recompute
+      # recompute_granularity: full # full, selective
+      # recompute_method: block # uniform, block
+      # recompute_num_layers: 0 # int
+
+      # profile
+      # profile: true
+      # use_pytorch_profiler: true
+      # profile_step_end: 7
+      # profile_step_start: 6
+      # profile_ranks: [0, 63]
 
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
-      pipeline_model_parallel_size: ${PRIMUS_PP:8}
-      expert_model_parallel_size: ${PRIMUS_EP:8}
-      # num_virtual_stages_per_pipeline_rank: 4
+      pipeline_model_parallel_size: ${PRIMUS_PP:4}
+      expert_model_parallel_size: ${PRIMUS_EP:16}
+      num_virtual_stages_per_pipeline_rank: 4
       overlap_grad_reduce: true
       overlap_param_gather: true
+      overlap_moe_expert_parallel_comm: false
+      moe_shared_expert_overlap: true
 
       # data
       mock_data: true
