--- a/primus/configs/modules/megatron/primus_megatron_module.yaml
+++ b/primus/configs/modules/megatron/primus_megatron_module.yaml
@@ -20,3 +20,6 @@ attn_warmup: false # set to true to decrease iter-1 time when using pp
 
 # tool
 dump_pp_data: false
+
+overlap_moe_expert_parallel_comm: false
+
