--- a/examples/megatron/configs/kimi_k2-pretrain.yaml
+++ b/examples/megatron/configs/kimi_k2-pretrain.yaml
@@ -45,7 +45,7 @@ modules:
 
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
-      pipeline_model_parallel_size: ${PRIMUS_PP:4}
+      pipeline_model_parallel_size: ${PRIMUS_PP:1} # cause 61 is not dividable
       expert_model_parallel_size: ${PRIMUS_EP:8}
       overlap_grad_reduce: true
       overlap_param_gather: true
