--- a/examples/megatron/configs/deepseek_530B_proxy-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_530B_proxy-pretrain.yaml
@@ -21,7 +21,7 @@ modules:
       log_avg_reset_interval: 50
 
       # hyber parameters
-      train_iters: 10
+      train_iters: 8
       micro_batch_size: 1
       global_batch_size: 256
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
@@ -38,18 +38,22 @@ modules:
       init_method_std: 0.008
       norm_epsilon: 1.0e-6
 
-      # recompute
-      recompute_granularity: full # full, selective
-      recompute_method: block # uniform, block
-      recompute_num_layers: 0 # int
+      # # recompute
+      # recompute_granularity: full # full, selective
+      # recompute_method: block # uniform, block
+      # recompute_num_layers: 0 # int
 
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
       pipeline_model_parallel_size: ${PRIMUS_PP:8}
       expert_model_parallel_size: ${PRIMUS_EP:8}
-      num_virtual_stages_per_pipeline_rank: 2
+      num_virtual_stages_per_pipeline_rank: 5
       overlap_grad_reduce: true
       overlap_param_gather: true
+      moe_use_legacy_grouped_gemm: true
+
+      overlap_moe_expert_parallel_comm: true
+      moe_shared_expert_overlap: false
 
       # data
       mock_data: true
@@ -57,28 +61,16 @@ modules:
       valid_data_path: null
       test_data_path: null
 
-      # fusion
-      # 20250321: need latest megatron docker image
-      moe_permute_fusion: false
-      # fused wgrad gemm and accumulation
-      gradient_accumulation_fusion: true
-      # recommend set `false` in fp8
-      moe_use_legacy_grouped_gemm: true
-      # fused topk router with aux score
-      moe_use_fused_router_with_aux_score: false
-      # pad 192/128 for deepseek attention
-      fused_padded_mla_attention: false
-
-      # ckpt
-      finetune: false
-      auto_continue_train: false
-      load: null
-      no_load_optim: null
-      no_load_rng: null
-      save: null
-      save_interval: 20000
       no_save_optim: null
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
       eval_iters: 0
+
+      # profile_ranks: [0, 511]
+      # profile: true
+      # use_pytorch_profiler: true
+      # profile_step_start: 15
+      # profile_step_end: 16
+      
+
