--- a/examples/megatron/configs/llama3.1_405B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.1_405B-pretrain.yaml
@@ -26,7 +26,7 @@ modules:
 
       train_iters: ${PRIMUS_TRAIN_ITERS:10}
       micro_batch_size: ${PRIMUS_MBS:1}
-      global_batch_size: ${PRIMUS_GBS:256}
+      global_batch_size: ${PRIMUS_GBS:96}
 
       seq_length: ${PRIMUS_SEQ_LENGTH:8192}
       max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:8192}
@@ -49,16 +49,27 @@ modules:
       expert_model_parallel_size: 1
       context_parallel_size: 1
 
+      # Each pp stage has 31 layers
+      #decoder_first_pipeline_num_layers: 30 # int
+      #decoder_last_pipeline_num_layers: 30 # int
+      #num_layers_per_virtual_pipeline_stage: null # int
+      #num_virtual_stages_per_pipeline_rank: null # int
+
       # data
       mock_data: true
       train_data_path: ${TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
 
+      # precision
+      fp16: false
+      bf16: true
+      fp8: hybrid #hybrid # e4m3
+
       # recompute
-      #recompute_granularity: full # full, selective
-      #recompute_method: block # uniform, block
-      #recompute_num_layers: 9 # int
+      recompute_granularity: full # full, selective
+      recompute_method: block # uniform, block
+      recompute_num_layers: 9 # int
 
       # ckpt
       finetune: false
