--- a/examples/torchtitan/configs/llama3_405b.toml
+++ b/examples/torchtitan/configs/llama3_405b.toml
@@ -31,19 +31,20 @@ eps = 1e-8
 warmup_steps = 600  # lr scheduler warm up, normally 20% of the train steps
 
 [training]
-local_batch_size = 2
+local_batch_size = 1
 seq_len = 8192
 max_norm = 1.0  # grad norm clipping
 steps = 3000
 compile = true
-dataset = "c4"
+dataset = "mock"
+#dataset = "c4"
 
 [parallelism]
 data_parallel_replicate_degree = 1
 data_parallel_shard_degree = -1
 tensor_parallel_degree = 8  # 8-way TP
 enable_async_tensor_parallel = true
-pipeline_parallel_degree = 1
+pipeline_parallel_degree = 6
 context_parallel_degree = 1
 
 [checkpoint]
