--- a/primus/configs/models/megatron/deepseek_v2_lite.yaml
+++ b/primus/configs/models/megatron/deepseek_v2_lite.yaml
@@ -8,7 +8,7 @@ tokenizer_type: DeepSeekV2Tokenizer
 tokenizer_model: deepseek-ai/DeepSeek-V2-Lite
 
 # model
-num_layers: 27
+num_layers: 4
 hidden_size: 2048
 ffn_hidden_size: 10944
 num_attention_heads: 16
@@ -20,11 +20,11 @@ qk_pos_emb_head_dim: 64
 v_head_dim: 128
 kv_channels: 128
 # moe
-moe_layer_freq: "([0]*1+[1]*26)"
+moe_layer_freq: 1
 num_experts: 64
 # num_shared_experts: 2
-moe_ffn_hidden_size: 1408
-moe_shared_expert_intermediate_size: 2816 # num_shared_experts * moe_ffn_hidden_size
+# moe_ffn_hidden_size: 1408
+# moe_shared_expert_intermediate_size: 2816 # num_shared_experts * moe_ffn_hidden_size
 
 # no group in deepseek v2 lite
 expert_model_parallel_size: 8
