comment out recompute

--- a/examples/megatron/configs/deepseek_160B_proxy-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_160B_proxy-pretrain.yaml
@@ -39,9 +39,9 @@ modules:
       norm_epsilon: 1.0e-6
 
       # recompute
-      recompute_granularity: full # full, selective
-      recompute_method: block # uniform, block
-      recompute_num_layers: 0 # int
+      # recompute_granularity: full # full, selective
+      # recompute_method: block # uniform, block
+      # recompute_num_layers: 0 # int
 
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
