--- a/examples/megatron/configs/deepseek_530B_proxy-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_530B_proxy-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: ${EXP_NAME:deepseek_530B_proxy-pretrain}
+exp_name: ${EXP_NAME:deepseek_530B_proxy-pretrain.profile}
 workspace: ./output
 
 modules:
@@ -19,6 +19,7 @@ modules:
       moe_router_force_load_balancing: true
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
+
 
       # hyber parameters
       train_iters: 10
@@ -39,23 +40,32 @@ modules:
       norm_epsilon: 1.0e-6
 
       # recompute
-      # recompute_granularity: full # full, selective
-      # recompute_method: block # uniform, block
-      # recompute_num_layers: 0 # int
+      recompute_granularity: full # full, selective
+      recompute_method: block # uniform, block
+      recompute_num_layers: 0 # int
 
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
       pipeline_model_parallel_size: ${PRIMUS_PP:8}
       expert_model_parallel_size: ${PRIMUS_EP:8}
-      num_virtual_stages_per_pipeline_rank: 2
-      overlap_grad_reduce: false
-      overlap_param_gather: false
+      # num_virtual_stages_per_pipeline_rank: 2
+      # num_virtual_stages_per_pipeline_rank: 3
+      # decoder_pipeline_manual_split_list: [2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1, 2, 2, 1]
+      # num_virtual_stages_per_pipeline_rank: 4
+      # decoder_pipeline_manual_split_list: [1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1]
+      overlap_grad_reduce: true
+      overlap_param_gather: true
 
       # data
-      mock_data: true
+      mock_data: false
       train_data_path: ${TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
+
+      profile: true
+      use_pytorch_profiler: true
+      profile_step_end: 7
+      profile_step_start: 6
 
       # fusion
       # 20250321: need latest megatron docker image
@@ -82,3 +92,6 @@ modules:
       disable_last_saving: true
       ckpt_format: torch
       eval_iters: 0
+
+      # moe_router_num_groups: 2 # int, node number
+      # moe_router_group_topk: 1
