--- a/examples/megatron/configs/deepseek_v2-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v2-pretrain.yaml
@@ -45,20 +45,17 @@ modules:
 
       # parallel
       tensor_model_parallel_size: ${PRIMUS_TP:1}
-      pipeline_model_parallel_size: ${PRIMUS_PP:1}
+      pipeline_model_parallel_size: ${PRIMUS_PP:4}
       expert_model_parallel_size: ${PRIMUS_EP:8}
       overlap_grad_reduce: true
       overlap_param_gather: true
 
-      num_layers: 15
-      moe_layer_freq: "([0]*1+[1]*14)"
-
       # use deepep
-      moe_token_dispatcher_type: flex
-      moe_shared_expert_overlap: false
-      moe_enable_deepep: true
-      moe_router_dtype: fp32
-      moe_deepep_num_cus: 64
+      # moe_token_dispatcher_type: flex
+      # moe_shared_expert_overlap: false
+      # moe_enable_deepep: true
+      # moe_router_dtype: fp32
+      # moe_deepep_num_cus: 64
 
       # data
       mock_data: true
@@ -91,3 +88,11 @@ modules:
       disable_last_saving: true
       ckpt_format: torch
       eval_iters: 0
+
+
+
+      # use primus_turbo plugin
+      # enable_primus_turbo: true
+      # enable_turbo_attention_float8 : false
+      # enable_turbo_gemm_float8 : true
+      # use_turbo_grouped_mlp: true
