--- a/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/deepseek_v2_lite-pretrain.yaml
@@ -77,7 +77,8 @@ modules:
       ckpt_format: torch
       eval_iters: 0
 
-      enable_primus_turbo: true
-      enable_turbo_attention_float8 : false
-      enable_turbo_gemm_float8 : true
-      use_turbo_grouped_mlp: true
+      # use primus_turbo plugin
+      # enable_primus_turbo: true
+      # enable_turbo_attention_float8 : false
+      # enable_turbo_gemm_float8 : true
+      # use_turbo_grouped_mlp: true
