--- a/examples/megatron/configs/qwen2.5_7B-pretrain.yaml
+++ b/examples/megatron/configs/qwen2.5_7B-pretrain.yaml
@@ -21,9 +21,9 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
-      train_iters: ${TOTAL_ITERS:10}
-      micro_batch_size: ${MBS:2}
-      global_batch_size: ${BS:8}
+      train_iters: 50
+      micro_batch_size: 10
+      global_batch_size: 640
 
       seq_length: ${SEQ_LENGTH:2048}
       max_position_embeddings: ${MAX_POSITION_EMBEDDINGS:131072}
@@ -31,7 +31,7 @@ modules:
       lr: 1.0e-5
       min_lr: 0.0
       lr_warmup_iters: 2
-      lr_decay_iters: null
+      lr_decay_iters: 320000 
       lr_decay_style: cosine
       weight_decay: 0.1
       adam_beta1: 0.9
