--- a/examples/megatron/configs/qwen2.5_72B-pretrain.yaml
+++ b/examples/megatron/configs/qwen2.5_72B-pretrain.yaml
@@ -41,9 +41,10 @@ modules:
       norm_epsilon: 1.0e-6
 
       # parallel
-      tensor_model_parallel_size: 8
+      tensor_model_parallel_size: 1
       pipeline_model_parallel_size: 1
       expert_model_parallel_size: 1
+      use_torch_fsdp2: true
       overlap_grad_reduce: true
       overlap_param_gather: true
 
@@ -76,7 +77,3 @@ modules:
       recompute_granularity: full # full, selective
       recompute_method: block # uniform, block
       recompute_num_layers: 80 # int
-
-      # activation recomputation
-      recompute_activations: false
-      recompute_granularity: null # full, selective
